WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267720
[WGSL] Global variable rewriter should not use range-based for loop
https://bugs.webkit.org/show_bug.cgi?id=267720
Summary
[WGSL] Global variable rewriter should not use range-based for loop
Tadeu Zagallo
Reported
2024-01-18 11:50:17 PST
[WGSL] Global variable rewriter should not use range-based for loop
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-18 11:50:29 PST
<
rdar://problem/121208769
>
Tadeu Zagallo
Comment 2
2024-01-18 11:52:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22930
EWS
Comment 3
2024-01-19 10:12:38 PST
Committed
273224@main
(91061b48751d): <
https://commits.webkit.org/273224@main
> Reviewed commits have been landed. Closing PR #22930 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug