[WGSL] Global variable rewriter should not use range-based for loop https://bugs.webkit.org/show_bug.cgi?id=267720 rdar://121208769

Reviewed by Mike Wyrzykowski.

New structs might be created and inserted into the vector while we're iterating it,
which invalidates the iterator.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::collectGlobals):

Canonical link: https://commits.webkit.org/273224@main